# LMPC

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  generate_orlando_answers.ipynb  generate_qa.ipynb  pyproject.toml  test_generated_questions.ipynb
data/characters/: Orlando Marlo.md
data/historical_context/: The Holy Kingdom of Luminara.md  The Maritime Republic of Aurivale.md  The People's Republic of Nova Terra.md
lmpc/dataclasses/: character.py  qa.py
lmpc/dataclasses/prompts/: dynamic_prompts.py  generative.py
src/lmpc/: __init__.py  ciao.py
tests/: dynamic_prompts_test.py
tests/data_classes/: character_test.py
