[project]
name = "lmpc"
version = "0.1.0"
description = "LMPC, a framework with tools and abstraction for llmsub"
readme = "README.md"
authors = [
    { name = "Oscar Pindaro", email = "oscar.pindaro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "haystack-ai==2.13",
    "torch>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
