[project]
name = "lmpc"
version = "0.1.0"
description = "LMPC, a framework with tools and abstraction for llmsub"
readme = "README.md"
authors = [
    { name = "Oscar Pindaro", email = "oscar.pindaro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "haystack-ai==2.13",
    "torch>=2.7.0",
]


[tool.isort]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
